:sparkles: update database and configure docker

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+Flask==2.2.2
+requests==2.28.1
+ptvsd==4.3.2 # Required for debugging.
 openai==0.27.6
-requests==2.30.0
 twilio==8.2.0
-flask==2.3.2
+pysondb==1.6.7
